Fix: Scrollbars

--- a/src/Pages/DetailPage/DetailPage.scss
+++ b/src/Pages/DetailPage/DetailPage.scss
@@ -36,7 +36,7 @@
     -ms-overflow-style: none; 
 
     scrollbar-width: none;
-    & ::--webkit-scrollbar{
+    & ::-webkit-scrollbar{
         display: none;
     }
 
@@ -91,7 +91,7 @@
             word-break: keep-all;
 
             scrollbar-width: none;
-            & ::--webkit-scrollbar{
+            & ::-webkit-scrollbar{
                 display: none;
             }
             -ms-overflow-style: none; 
@@ -129,7 +129,7 @@
                 display: flex;
                 flex-direction: column;
                 scrollbar-width: none;
-                --webkit-scrollbar: none;
+                -webkit-scrollbar: none;
                 -ms-overflow-style: none; 
 
 
@@ -138,10 +138,10 @@
             
         }
 
-        .description::--webkit-scrollbar{
+        .description::-webkit-scrollbar{
             display: none;
         }
-        .description ::--webkit-scrollbar{
+        .description ::-webkit-scrollbar{
             display: none;
         }
     }
@@ -276,6 +276,11 @@
             }
 
         }
+
+        .description::-webkit-scrollbar{
+            display: none;
+        }
+        
     }
 }
 
