--- a/src/Pages/VisualDetailPage/IntroductionElement/IntroductionElement.scss
+++ b/src/Pages/VisualDetailPage/IntroductionElement/IntroductionElement.scss
@@ -14,7 +14,7 @@
     -ms-overflow-style: none; 
 
     scrollbar-width: none;
-    & ::--webkit-scrollbar{
+    &::-webkit-scrollbar{
         display: none;
     }
 
